# simulation-with-user-collections

./: .gitignore  README.md  main.py  pyproject.toml
src/casino_lab4/: settings.py
src/casino_lab4/collections/: balances.py  chip.py  geese.py  players.py
src/casino_lab4/core/: errors.py
src/casino_lab4/domain/: chip.py  goose.py  player.py
src/casino_lab4/simulation/: casino.py  event_types.py  events.py  randomization.py  runner.py  selectors.py  setup.py  stats.py
src/casino_lab4/utils/: logging.py  misc.py
tests/: conftest.py
tests/collections/: test_balances.py  test_chip.py  test_geesee.py  test_players.py
tests/domain/: test_chip.py  test_goose.py  test_player.py
tests/simulation/: test_casino.py  test_events.py  test_randomization.py  test_runner.py  test_selectors.py  test_setup.py
